fix: make borders visible for switch

--- a/src/components/gen/JunoSwitch.module.css
+++ b/src/components/gen/JunoSwitch.module.css
@@ -1,9 +1,9 @@
 .track {
-  --bg-color: var(--mantine-color-dark-9);
-  border-color: var(--bg-color);
-  background-color: var(--bg-color);
+  border-width: 2px;
+  border-color: var(--mantine-color-dark-8);
+  background-color: var(--mantine-color-dark-9);
   padding: 0;
-  height: 15px;
+  height: 20px;
   & > .thumb {
     border: none;
     background-color: var(--mantine-color-dark-4);
